examples/negative/ffi/v2_struct_field_non_c.kai
# Negative fixture (#417 / FFI v2): an `extern "C" type` struct field
# must carry an exact C width. `Int` is i64 and `String` is a pointer —
# neither matches the small-struct layout the C compiler lays out, so
# they break the struct ABI (the precise mis-alignment trap the issue
# flags). Struct fields must be fixed-width (U8..F32) or a nested
# `extern "C" type`. Parser must reject the wide-primitive field.

extern "C" type Bad = { name: String }

fn main() : Int = 0
